--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -76,5 +76,9 @@
         <members>*</members>
         <name>CustomTab</name>
     </types>
+    <types>
+        <members>*</members>
+        <name>PermissionSet</name>
+    </types>
     <version>52.0</version>
 </Package>
